--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,17 @@
     width: 700px;
     height: 300px;
     position: relative;
+    display: none;
 }
 
 .item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.item.active {
+    display: block;
 }
 
 .item .text {
